# ipc-module

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  pypi.yml  test.yml
config/: index.html
docs/: README.md  config.md  helper.md  polynomial.md  profiler.md  regressor.md
helper/: index.html
polynomial/: index.html
profiler/: index.html
regressor/: index.html
search/: search_index.json
src/ipc_module/: helper.py  polynomial.py  profiler.py
